--- a/TiemEngine/TiemEngine.vcxproj
+++ b/TiemEngine/TiemEngine.vcxproj
@@ -64,6 +64,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>TiemEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>IYLMGTH</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
